--- a/main.html
+++ b/main.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <title>Image Downloader</title>
   </head>
 
   <body>
-    <!-- the entire body must be written by student -->
+    <h2>Image Downloader</h2>
+
+    <div id="loading">Loading images...</div>
+    <div id="error"></div>
     <div id="output"></div>
+
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
