--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
   <body>
     <h2>Image Downloader</h2>
 
+    <!-- Button to trigger downloads -->
+    <button id="download-images-button">Download Images</button>
+
     <div id="loading">Loading images...</div>
     <div id="error"></div>
     <div id="output"></div>
